# Satty

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  config.toml  release.nu
cli/src/: command_line.rs
src/: configuration.rs  keybindings.rs  main.rs  math.rs  sketch_board.rs
src/femtovg_area/: imp.rs  mod.rs
src/tools/: arrow.rs  blur.rs  brush.rs  crop.rs  drag_box.rs  ellipse.rs  highlight.rs  line.rs  marker.rs  mod.rs  pixelate.rs  pointer.rs  rectangle.rs  text.rs
src/ui/: toolbars.rs
